--- a/Market/Views/Home/Index.cshtml
+++ b/Market/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Market";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center text-light">
+    <h1 class="display-4">Добро пожаловать!</h1>
+    <a asp-controller="EvCar" asp-action="GetAll" class="text-info" >Подобрать машину</a>
 </div>
