--- a/Market/Views/Shared/_Layout.cshtml
+++ b/Market/Views/Shared/_Layout.cshtml
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100 bg-opacity-75 bg-dark">
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark  box-shadow">
         <div class="container-fluid">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Market</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -18,38 +18,94 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="/">Home</a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/">Домой</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">Контакты</a>
+                    </li>
+                </ul>
+                @if (!User.Identity?.IsAuthenticated ?? false)
+                {
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Аккаунт</a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                                <li>
+                                    <a class="dropdown-item" href="/login">Войти</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/contact">Contact</a>
+                                <li>
+                                    <a class="dropdown-item" href="/register">Зарегистрироваться</a>
                                 </li>
                             </ul>
-                            <ul class="navbar-nav ms-auto">
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Account</a>
-                                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="/login">Login</a></li>
-                                        <li><a class="dropdown-item" href="/register">Register</a></li>
-                                    </ul>
+                        </li>
+                    </ul>
+                }
+                else if (User.Identity?.IsAuthenticated ?? false)
+                {
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Аккаунт</a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                                <li>
+                                    <a class="dropdown-item" href="/login">Имя пользователя</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/register">Кнопка 1</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/register">Кнопка 2</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/register">Кнопка 3</a>
                                 </li>
                             </ul>
-                        </div>
-            
+                        </li>
+                    </ul>
+                }
+                else if (User.IsInRole("Admin"))
+                {
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Аккаунт</a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                                <li>
+                                    <a class="dropdown-item" href="/login">Имя пользователя</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/register">Кнопка 1</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/register">Кнопка 2</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/register">Кнопка 3</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/register">Админ-панель</a>
+                                </li>
+                                
+                            </ul>
+                        </li>
+                    </ul>
+                }
+            </div>
+
         </div>
     </nav>
 </header>
-<div class="container">
+<div class="container-fluid mt-3">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2023 - Market - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-    </div>
+<footer class="bg-dark text-center text-white footer mt-auto">
+    <div class="text-center p-3 bg-dark">
+    © 2023 Автор:
+    <a class="text-white" href="https://vk.com/r_rezak_k">Резников К.</a>
+  </div>
 </footer>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
