--- a/Market/Views/EvCar/GetAll.cshtml
+++ b/Market/Views/EvCar/GetAll.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Market.Domain.Models.EvCar>
+@model List<Market.Domain.Models.EvCar>
 @{
     Layout = null;
 }
@@ -11,7 +11,14 @@
 </head>
 <body>
 <div>
-      
+      @if (Model.Count == 0)
+      {
+          
+      }
+      else
+      {
+          
+      }
 </div>
 </body>
 </html>
