--- a/Market/Views/EvCar/GetAll.cshtml
+++ b/Market/Views/EvCar/GetAll.cshtml
@@ -1,7 +1,5 @@
 @model List<Market.Domain.Models.EvCar>
-@{
-    Layout = null;
-}
+
 
 <!DOCTYPE html>
 
@@ -10,15 +8,60 @@
     <title>title</title>
 </head>
 <body>
-<div>
-      @if (Model.Count == 0)
-      {
-          
-      }
-      else
-      {
-          
-      }
+<div class="container mw-100 bg-light rounded-2 ">
+    <div class="px-2 h-100 ">
+        <div class="w-50 ml-0 mr-0 mx-auto text-center">
+              <h1 class="text-dark text-center">Электромобили</h1>
+        </div>
+        @if (Model.Count == 0)
+        {
+            <div class="row">
+                <div class="w-50 mx-auto text-danger">
+                    <p class="text-justify">К сожалению, сейчас нет автомобилей, доступных к покупке. Возвращайтесь позже или заполните форму обратной связи.</p>
+
+                </div>
+            </div>
+            <div class="row mx-auto " style="width:70vh" >
+                <form class=" border-dark border-1 w-50 mx-auto mb-2">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Электронная почта</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">Мы никогда не передадим вашу почту кому-то ещё.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Оставьте сообщение</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    @*<div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Я хочу купить автомобиль</label>
+                    </div>*@
+                    <button type="submit" class="btn btn-primary mt-1">Submit</button>
+                </form>
+            </div>
+
+        }
+        else
+        {
+            <div class="row">
+                @foreach (var evCar in Model)
+                {
+                    <div class="  col-sm-3">
+                        <div class="card m-2">
+                            <img src="@evCar.ImageUrl" class="card-img  p-2 mx-auto rounded-2" alt="Изображение машины">
+                            <div class="card-body ">
+                                <h5 class="card-title">@(evCar.Manufacturer + " " + evCar.Model) </h5>
+                                <p class="card-text">@evCar.ShortDescription</p>
+                                <a class="btn btn-primary  mx-0" style="float:right; background:rgb(66,62,59);" asp-route-id="@evCar.Id" asp-action="Get">Подробнее</a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                }
+                
+            </div>
+        }
+    </div>
 </div>
 </body>
 </html>
