--- a/Market/Views/Shared/_Layout.cshtml
+++ b/Market/Views/Shared/_Layout.cshtml
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Домой</a>
+                        <a class="nav-link" aria-current="page" asp-action="GetAll">Автомобили</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact">Контакты</a>
+                        <a class="nav-link" href="https://vk.com/r_rezak_k">Вконтакте автора)))</a>
                     </li>
                 </ul>
                 @if (!User.Identity?.IsAuthenticated ?? false)
@@ -66,7 +66,7 @@
                                 @if (User.IsInRole("Admin"))
                                 {
                                     <li>
-                                        <a class="dropdown-item" href="/admin/panel">Админ-панель</a>
+                                        <a class="dropdown-item" asp-controller="AdminPanel" asp-action="General">Админ-панель</a>
                                     </li>
                                 }
                             </ul>
